fix Pango plugin build on macOS
Compiling plugin/pango depends on the discovery of PangoCairo and its dependent
libraries which is handled by cmake/FindPangoCairo.cmake. This file was assuming
all libraries were available at default system paths, which is not true on e.g.
macOS when you install libraries via Homebrew or Macports. We now simply ask
pkg-config to find all necessary information for us (unless we are on Windows).

This also incidentally cleans up the following warning issued by CMake in CI:

  CMake Warning (dev) at C:/…/FindPackageHandleStandardArgs.cmake:272 (message):
    The package name passed to `find_package_handle_standard_args` (PANGOCAIRO)
    does not match the name of the calling package (PangoCairo).  This can lead
    to problems in calling code that expects `find_package` result variables
    (e.g., `_FOUND`) to follow a certain pattern.
  Call Stack (most recent call first):
    cmake/FindPangoCairo.cmake:20 (find_package_handle_standard_args)
    CMakeLists.txt:85 (find_package)
  This warning is for project developers.  Use -Wno-dev to suppress it.

--- a/plugin/pango/CMakeLists.txt
+++ b/plugin/pango/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(CAIRO_FOUND AND PANGOCAIRO_FOUND)
+if(CAIRO_FOUND AND PangoCairo_FOUND)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
@@ -9,7 +9,7 @@ include_directories(
     ${GRAPHVIZ_LIB_DIR}/gvc
     ${GRAPHVIZ_LIB_DIR}/pathplan
     ${CAIRO_INCLUDE_DIRS}/cairo
-    ${PANGOCAIRO_INCLUDE_DIRS}
+    ${PangoCairo_INCLUDE_DIRS}
 )
 
 add_library(gvplugin_pango SHARED
@@ -28,7 +28,7 @@ add_library(gvplugin_pango SHARED
 target_link_libraries(gvplugin_pango
     gvc
     ${CAIRO_LIBRARIES}
-    ${PANGOCAIRO_LIBRARIES}
+    ${PangoCairo_LINK_LIBRARIES}
 )
 
 # Installation location of library files
@@ -44,7 +44,7 @@ if (WIN32)
     install(
         FILES
             ${CAIRO_RUNTIME_LIBRARIES}
-            ${PANGOCAIRO_RUNTIME_LIBRARIES}
+            ${PangoCairo_RUNTIME_LIBRARIES}
         DESTINATION ${BINARY_INSTALL_DIR}
     )
 endif()
@@ -55,4 +55,4 @@ set_target_properties(gvplugin_pango PROPERTIES
     SOVERSION ${GRAPHVIZ_PLUGIN_VERSION}
 )
 
-endif(CAIRO_FOUND AND PANGOCAIRO_FOUND)
+endif()
