update CMake Cairo discovery to match PangoCairo
This does the equivalent of the previous commit, to now use pkg-config to
discover Cairo on non-Windows platforms and to suppress the CMake warning:

  CMake Warning (dev) at ...FindPackageHandleStandardArgs.cmake:272 (message):
    The package name passed to `find_package_handle_standard_args` (CAIRO) does
    not match the name of the calling package (Cairo).  This can lead to
    problems in calling code that expects `find_package` result variables
    (e.g., `_FOUND`) to follow a certain pattern.
  Call Stack (most recent call first):
    cmake/FindCairo.cmake:12 (find_package_handle_standard_args)
    CMakeLists.txt:81 (find_package)
  This warning is for project developers.  Use -Wno-dev to suppress it.

--- a/plugin/pango/CMakeLists.txt
+++ b/plugin/pango/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(CAIRO_FOUND AND PangoCairo_FOUND)
+if(Cairo_FOUND AND PangoCairo_FOUND)
 
 include_directories(
     ${CMAKE_CURRENT_SOURCE_DIR}
@@ -8,7 +8,7 @@ include_directories(
     ${GRAPHVIZ_LIB_DIR}/common
     ${GRAPHVIZ_LIB_DIR}/gvc
     ${GRAPHVIZ_LIB_DIR}/pathplan
-    ${CAIRO_INCLUDE_DIRS}/cairo
+    ${Cairo_INCLUDE_DIRS}/cairo
     ${PangoCairo_INCLUDE_DIRS}
 )
 
@@ -27,7 +27,7 @@ add_library(gvplugin_pango SHARED
 
 target_link_libraries(gvplugin_pango
     gvc
-    ${CAIRO_LIBRARIES}
+    ${Cairo_LINK_LIBRARIES}
     ${PangoCairo_LINK_LIBRARIES}
 )
 
@@ -43,7 +43,7 @@ install(
 if (WIN32)
     install(
         FILES
-            ${CAIRO_RUNTIME_LIBRARIES}
+            ${Cairo_RUNTIME_LIBRARIES}
             ${PangoCairo_RUNTIME_LIBRARIES}
         DESTINATION ${BINARY_INSTALL_DIR}
     )
